--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,8 @@
         "vendor-dir": "dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "10.5.13",
-        "squizlabs/php_codesniffer": "3.9.0",
-        "vimeo/psalm": "5.23.1"
+        "phpunit/phpunit": "11.0.0",
+        "squizlabs/php_codesniffer": "3.9.0"
     },
 	"autoload" : {
 		"psr-4" : {
